--- a/style.css
+++ b/style.css
@@ -142,7 +142,8 @@ body{
     z-index: 1;
     position: absolute;
     background-color: rgb(255 104 3 / 13%);
-    border: solid rgba(255, 104, 3, 0.795) 1px;
+    outline: solid rgba(255, 104, 3, 0.795) 1px;
+    border: none;
     border-radius: .3rem ;
     animation-name: roll_in;
     animation-duration: 1s;
@@ -271,8 +272,15 @@ body{
     cursor: pointer;
     border-radius: .3rem;
     padding: .2rem .8rem;    
+}
+.category_nav_inner li:nth-child(1){
+    
+}
+.prod_nav{
     background-color: rgba(255, 104, 3, 0.329);
-    border: solid 1px rgba(255, 104, 3, 0.795);
+    outline: solid 1px rgba(255, 104, 3, 0.795);
+    border: none;
+
 }
 
 
