--- a/style.css
+++ b/style.css
@@ -1,32 +1,38 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-a{
+
+a {
     text-decoration: none;
 }
-body{
+
+body {
     height: 100vh;
     color: rgb(0, 0, 0);
     font-family: sans-serif;
 }
-#header{
+
+#header {
     z-index: 1;
     background-color: white;
     width: 100%;
     border-bottom: rgba(0, 0, 0, 0.233) 2px solid;
     position: absolute;
 }
-.header_inner{
+
+.header_inner {
     height: 3.8rem;
     display: flex;
     justify-content: space-between;
 }
-#header section:nth-child(1) li:nth-child(1){
+
+#header section:nth-child(1) li:nth-child(1) {
     display: grid;
     place-items: center;
 }
-#header section:nth-child(1){
+
+#header section:nth-child(1) {
     padding-right: 2rem;
     column-gap: 2rem;
     display: grid;
@@ -34,7 +40,8 @@ body{
     place-items: center;
     width: 60%;
 }
-#header section #search{
+
+#header section #search {
     border-radius: .4rem;
     border: solid 1px rgb(189, 189, 189);
     padding: 0 1rem;
@@ -43,25 +50,29 @@ body{
     min-width: 2rem;
     height: 2.4rem;
 }
-#header section .search{
+
+#header section .search {
     position: relative;
     display: grid;
     place-items: end;
 }
-#header section .search img{
+
+#header section .search img {
     cursor: text;
     top: 50%;
     right: -1%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     position: absolute;
     height: 1.5rem;
     width: 1.5rem;
 }
-#header section #search:focus{
+
+#header section #search:focus {
     border: solid 1px black;
-    
+
 }
-#header section:nth-child(2){
+
+#header section:nth-child(2) {
     width: 30%;
     display: flex;
     justify-content: center;
@@ -69,7 +80,8 @@ body{
     /* padding: 0 2rem; */
     align-items: center;
 }
-#header section:nth-child(2) > *{
+
+#header section:nth-child(2)>* {
     border: solid 1px rgba(0, 0, 0, 0.123);
     width: 2.5rem;
     border-radius: .5rem;
@@ -80,11 +92,11 @@ body{
 
 }
 
-#header section li{
+#header section li {
     list-style: none;
 }
 
-#logo{
+#logo {
     height: 2rem;
 }
 
@@ -94,7 +106,7 @@ body{
 
 /* parent column */
 
-.outwrap{
+.outwrap {
     overflow: hidden;
     position: relative;
     height: 100%;
@@ -103,7 +115,7 @@ body{
 
 
 /* first column */
-.side_nav{
+.side_nav {
     overflow: hidden;
     padding-top: 7rem;
     border-right: solid rgba(0, 0, 0, 0.233) 2px;
@@ -116,15 +128,17 @@ body{
     flex-direction: column;
     justify-content: space-between;
     /* font-variant: small-caps; */
-    
+
 }
-.side_nav li,.inner_side_nav_settings{
+
+.side_nav li,
+.inner_side_nav_settings {
     height: 3rem;
     width: 3rem;
     position: relative;
 }
 
-.side_nav img{
+.side_nav img {
     height: 1.2rem;
     position: absolute;
     bottom: -.8rem;
@@ -132,11 +146,11 @@ body{
     animation-name: roll_in;
     animation-duration: .3s;
     animation-iteration-count: 1;
-    transform: translateX(-6rem) rotate(0) ;
+    transform: translateX(-6rem) rotate(0);
 }
 
 
-.bgsect{
+.bgsect {
     height: 100%;
     width: 100%;
     z-index: 1;
@@ -144,67 +158,75 @@ body{
     background-color: rgb(255 104 3 / 13%);
     outline: solid rgba(255, 104, 3, 0.795) 1px;
     border: none;
-    border-radius: .3rem ;
+    border-radius: .3rem;
     animation-name: roll_in;
     animation-duration: 1s;
     animation-iteration-count: 1;
-    transform: translateX(0) rotate(0) ;
+    transform: translateX(0) rotate(0);
 
 }
- 
-.on_select{
+
+.on_select {
     color: rgba(255, 104, 3, 0.856);
 
 }
-.on_select i{
+
+.on_select i {
     background-color: rgba(255, 104, 3, 0.856) !important;
 }
 
 @keyframes roll_in {
-    0%{
+    0% {
         opacity: 0%;
-        transform: translateX(-5rem) rotate(30deg)  ;
+        transform: translateX(-5rem) rotate(30deg);
     }
 
 }
-.textdp{
+
+.textdp {
     position: relative;
     z-index: 2;
     text-align: center;
 }
-.side_nav li{
+
+.side_nav li {
     cursor: pointer;
 }
-.side_nav li:hover{
+
+.side_nav li:hover {
     transition: .3s;
     color: rgba(255, 104, 3, 0.795);
 }
-.side_nav li:hover i{
+
+.side_nav li:hover i {
     background-color: rgba(255, 104, 3, 0.856) !important;
     transition: .3s;
 }
 
-.inner_side_nav{
+.inner_side_nav {
     display: flex;
-    flex-direction:column ;
+    flex-direction: column;
     row-gap: 3rem;
     align-items: center;
 
 }
-.inner_side_nav_settings{
+
+.inner_side_nav_settings {
     transform: translateY(-9rem);
     width: 100%;
     display: grid;
     place-items: center;
 }
-.side_nav li{
+
+.side_nav li {
     display: grid;
     place-items: center;
     list-style: none;
     font-size: .8rem;
 }
-.side_nav i{
-    
+
+.side_nav i {
+
     display: inline-block;
     height: 1.5rem;
     width: 1.5rem;
@@ -213,7 +235,7 @@ body{
 
 /* second column */
 
-.products{
+.products {
     padding-left: 4.2rem;
     background-color: rgb(221, 221, 221);
     height: 100%;
@@ -222,14 +244,14 @@ body{
 
 /* third column */
 
-.counting{
+.counting {
     padding-top: 4rem;
     background-color: rgb(255, 255, 255);
     height: 100%;
     border-left: solid rgba(0, 0, 0, 0.233) 2px;
 }
 
-.middle_side{
+.middle_side {
     display: grid;
     width: 100%;
     height: 100%;
@@ -242,25 +264,26 @@ body{
 
 
 
-.category_cont{
+.category_cont {
     display: grid;
     place-items: center;
     padding: 1rem 2rem 0 2rem;
 }
 
-.category_nav{
+.category_nav {
     height: fit-content;
     border-radius: .5rem;
     border: solid rgb(189, 189, 189) 1px;
     background-color: white;
     place-items: center;
-    padding: .8rem 2.5rem .8rem 1rem ;
+    padding: .8rem 2.5rem .8rem 1rem;
     white-space: nowrap;
     position: relative;
     width: 96%;
     overflow: hidden;
 }
-.category_nav_inner{
+
+.category_nav_inner {
     height: 100%;
     width: 100%;
     gap: .5rem;
@@ -268,15 +291,16 @@ body{
     justify-content: flex-start;
     overflow-x: scroll;
 }
-.category_nav_inner li{
+
+.category_nav_inner li {
     cursor: pointer;
     border-radius: .3rem;
-    padding: .2rem .8rem;    
+    padding: .2rem .8rem;
 }
-.category_nav_inner li:nth-child(1){
-    
-}
-.prod_nav{
+
+
+
+.prod_nav {
     background-color: rgba(255, 104, 3, 0.329);
     outline: solid 1px rgba(255, 104, 3, 0.795);
     border: none;
@@ -284,12 +308,13 @@ body{
 }
 
 
-.category_nav_new{
-    overflow:visible ;
+.category_nav_new {
+    overflow: visible;
     flex-wrap: wrap;
     justify-content: center;
 }
-#allcategory_open{
+
+#allcategory_open {
     position: absolute;
     right: 0;
     top: 0;
@@ -298,58 +323,65 @@ body{
     background-color: rgb(161, 161, 161);
     width: 2em;
 }
-#allcategory_open img{
+
+#allcategory_open img {
     height: 1rem;
-    
+
 }
-#allcategory_open:hover{
+
+#allcategory_open:hover {
     background-color: rgb(189, 189, 189);
     cursor: pointer;
 }
-.category_nav_inner::-webkit-scrollbar{
+
+.category_nav_inner::-webkit-scrollbar {
     display: none;
 }
-.category_nav li{
+
+.category_nav li {
     list-style: none;
     font-size: .9rem;
 }
-.header_inner section:nth-child(2) li:hover img{
+
+.header_inner section:nth-child(2) li:hover img {
     transform: scale(.8);
     transition: .3s;
 
 }
-.header_inner section:nth-child(2) li:hover{
+
+.header_inner section:nth-child(2) li:hover {
     background-color: rgb(189, 189, 189) !important;
     cursor: pointer;
 
 }
 
-#refresh:hover img{
-    transform: rotate(280deg)  scale(.8);
+#refresh:hover img {
+    transform: rotate(280deg) scale(.8);
     transition: .3s;
- 
+
 }
 
-.header_inner section:nth-child(2) li img{
+.header_inner section:nth-child(2) li img {
     opacity: 80%;
     height: 1.5rem;
 }
 
-img{
+img {
     -webkit-user-drag: none;
     user-select: none;
 }
 
 
 
-.products_content{
+.products_content {
     margin: 1rem;
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
     gap: .5rem;
 }
-.products_content ol{
+
+.products_content ol {
     cursor: pointer;
     background-color: white;
     border: solid 1px rgb(189, 189, 189);
@@ -363,35 +395,188 @@ img{
     border-radius: .5rem;
 
 }
-.products_content ol:hover{
+
+.products_content ol:hover {
     border: solid 1px rgba(255, 104, 3, 0.856);
     background-color: rgba(255, 104, 3, 0.329);
 }
-.products_content ol img{
+
+.products_content ol img {
     height: 6rem;
 }
 
- 
-.products_content ol li{
+
+.products_content ol li {
     width: 100%;
     display: flex;
     place-items: center;
     justify-content: center;
     flex-direction: column;
 }
-.products_content ol h5{
+
+.products_content ol h5 {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
     width: 80%;
     text-align: center;
 }
-.products_content ol h4{
+
+.products_content ol h4 {
     text-align: center;
     margin-top: 1rem;
 }
 
 
 
+
+
+
+
+
+
+#counter_body {
+    display: flex;
+    place-items: center;
+    flex-direction: column;
+    justify-content: start;
+    row-gap: .7rem;
+    margin-top: 3rem;
+    height: 42%;
+    border-bottom: solid 1px rgb(161, 161, 161);
+    overflow-y: scroll;
+    padding-bottom: 2rem;
+
+}
+
+/* #counter_body::-webkit-scrollbar {
+    
+} */
+
+#counter_body ol {
+    width: 90%;
+    list-style: none;
+    height: 2.8rem;
+    border: solid 1px rgb(161, 161, 161);
+    border-radius: .4rem;
+    cursor: pointer;
+}
+
+#counter_body ol:hover {
+    background-color: rgba(216, 216, 216, 0.425);
+}
+
+#counter_body ol li:nth-child(1) {
+    padding: .7rem .5rem;
+    display: grid;
+    grid-template-columns: 10% 12% auto 18% 10%;
+}
+
+#counter_body ol li:nth-child(2) {
+    height: 0;
+
+}
+
+#counter_body ol li>* {
+    display: flex;
+    align-items: center;
+}
+
+#counter_body ol p:nth-child(1) {
+    display: grid;
+    place-items: center;
+}
+
+#counter_body ol p:nth-child(3) {
+    display: grid;
+}
+
+#counter_body ol p img {
+    height: .9rem;
+}
+
+#counter_body i {
+    transform: scale(1.1);
+    cursor: pointer;
+    display: grid;
+    border-radius: 50%;
+    place-items: center;
+    padding: .1rem;
+    height: 1rem;
+    width: 1rem;
+    outline: solid 1px rgb(161, 161, 161);
+    background-color: rgba(161, 161, 161, 0.219);
+}
+
+#counter_body i:hover {
+    transition: .3s;
+    background-color: rgba(161, 161, 161, 0.568);
+
+}
+
+#counter_body i img {
+    transform: rotate(45deg);
+    height: .8rem;
+    width: .8rem;
+}
+
+
+.totaling {
+    padding-top: 10%;
+    background-color: rgb(221, 221, 221);
+    height: 57%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+
+.totaling section {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 1rem;
+}
+.totaling section select{
+    cursor: pointer;
+    background-color: rgb(199, 199, 199);
+}
+.totaling section li{
+    list-style: none;
+}
+
+.totaling section:nth-child(4){
+    margin-top: .8rem;
+    font-weight: 600;
+    font-size: 1.3rem;
+}
+.totaling section:nth-child(5){
+    display: flex;
+    justify-content: center;
+    gap: .5rem;
+    margin-top: .5rem;
+}
+.totaling section:nth-child(5) button{
+    cursor: pointer;
+    height: 3rem;
+    width: 8rem;
+    border-radius: .2rem;
+    border: none;
+    color: white;
+}
+.totaling section:nth-child(5) #discount:hover{
+    background-color:#d4700bbb ;
+    transition: .3s;
+}
+.totaling section:nth-child(5) #proceed:hover{
+    background-color:#a27c12c5 ;
+    transition: .3s;
+}
+.totaling section #discount{
+    outline: solid 1px #ff8000;
+    background-color: #cc6600de;
+}
+.totaling section #proceed{
+    outline: solid 1px #ffbe0a;
+    background-color: #A27C12;
+}
 
 
