--- a/style.css
+++ b/style.css
@@ -255,7 +255,10 @@ body {
     display: grid;
     width: 100%;
     height: 100%;
+    grid-template-areas: " h2,";
     grid-template-columns: auto 30%;
+
+
 
 }
 
@@ -573,7 +576,12 @@ img {
     justify-content: space-between;
     padding: 0 1rem;
 }
+.totaling section:nth-child(1){
+    align-items: end;
+    
+}
 .totaling section select{
+     height: 1.5rem;
     cursor: pointer;
     background-color: rgb(199, 199, 199);
 }
