--- a/resources/settings.css
+++ b/resources/settings.css
@@ -67,6 +67,7 @@
     position: relative;
     display: grid;
     grid-template-rows: 1.7rem auto 2rem;
+    opacity: 50%;
 }
 .themes_select label .theme_name{
     display: grid;
@@ -80,8 +81,12 @@
 .themes_select label:hover{
     background-color: rgba(255, 104, 3, 0.63);
     border:solid 1px rgb(255, 104, 3);
+    opacity: 1;
 }
- 
+.selected_class{
+    opacity: 1 !important;
+
+}
 .themes_select input{
     position: absolute;
     top: .5rem;
