--- a/resources/history.css
+++ b/resources/history.css
@@ -3,6 +3,14 @@
     padding: 6rem 0 0 4rem;
 
 }
+.monokai_mode .history_cont{
+    background-color: #47493e;
+    color: rgb(199, 199, 199);
+}
+.dark_mode .history_cont{
+    background-color: #1F1F1F;
+    color: rgb(199, 199, 199);
+}
 .time_section{
     display: flex;
     flex-direction: column;
@@ -15,6 +23,12 @@
     background-color: rgb(221, 221, 221);
     position: relative;
 
+}
+.monokai_mode .history_pane{
+    background-color: #47493e;
+}
+.dark_mode .history_pane{
+    background-color: #1F1F1F;
 }
 
 .history_cont h2{
@@ -38,6 +52,18 @@
     border-radius: 1rem 0 0 1rem;
 
 }
+.monokai_mode .history_info{
+    background-color: #1E1F1C;
+    color: rgb(199, 199, 199);
+    border: solid 1px rgba(255, 255, 255, 0.363);
+}
+.dark_mode .history_info{
+    background-color: #181818;
+    color: rgb(199, 199, 199);
+    border: solid 1px rgba(255, 255, 255, 0.363);
+}
+
+
 .history_cont ol{
     display: flex;
     justify-content: space-between;
@@ -47,6 +73,16 @@
     border: solid 1px rgb(189, 189, 189);
     padding: .5rem .8rem;
 }
+
+.monokai_mode .history_cont ol{
+    background-color: #1E1F1C;
+    border: solid 1px rgba(255, 255, 255, 0.363);
+}
+.dark_mode .history_cont ol{
+    background-color: #181818;
+    border: solid 1px rgba(255, 255, 255, 0.363);
+}
+
 .history_cont li:nth-child(2){
     text-align: center;
 }
@@ -71,16 +107,18 @@
     row-gap: .3rem;
 }
 .today_cont > *:hover{
-    background-color: rgba(255, 104, 3, 0.329);
-    border-color: rgba(255, 104, 3, 0.87);
+    background-color: rgba(255, 104, 3, 0.329) !important;
+    border-color: rgba(255, 104, 3, 0.87) !important;
 }
 .yesterday_cont > *:hover{
-    background-color: rgba(255, 104, 3, 0.329);
-    border-color: rgba(255, 104, 3, 0.87);
+    background-color: rgba(255, 104, 3, 0.329) !important;
+    border-color: rgba(255, 104, 3, 0.87) !important;
+    
 }
 .last_week_cont > *:hover{
-    background-color: rgba(255, 104, 3, 0.329);
-    border-color: rgba(255, 104, 3, 0.87);
+    background-color: rgba(255, 104, 3, 0.329) !important;
+    border-color: rgba(255, 104, 3, 0.87) !important;
+    
 }
 
 
