--- a/resources/overview.css
+++ b/resources/overview.css
@@ -2,6 +2,12 @@
     grid-template-columns: unset;
     background-color: rgb(221, 221, 221);
 }
+.monokai_mode .middle_side{
+    background-color: #47493e;
+} 
+.dark_mode .middle_side{
+    background-color: #1F1F1F;
+} 
 
 .dashboard {
     margin: 5.2rem 0 0 4rem;
@@ -32,6 +38,14 @@
     bottom: -1rem;
     left: -.1rem;
 }
+.monokai_mode .dashboard_body li::after{
+    background-color: #1E1F1C !important;
+    color: rgb(199,199,199);
+}
+.dark_mode .dashboard_body li::after{
+    background-color: #181818 !important;
+    color: rgb(199,199,199);
+}
 
 .summary_show li::after {
     content: "₱";
@@ -48,6 +62,14 @@
     border: solid 1px rgb(172, 172, 172);
     bottom: -1rem;
     left: -.1rem;
+}
+.monokai_mode .summary_show li::after{
+    background-color: #1F1F1F !important;
+    color: rgb(199,199,199);
+}
+.dark_mode .summary_show li::after{
+    background-color: #181818 !important;
+    color: rgb(199,199,199);
 }
 
 .summary_show {
@@ -76,16 +98,29 @@
     box-shadow:  15px 15px 10px #8d8d8d;
 
 }
+.monokai_mode .summary_show li,
+.monokai_mode .dashboard_body li {
+    background: #1E1F1C !important;
+    color: rgb(199,199,199);
+    box-shadow:  10px 10px 5px #1E1F1C !important;
 
+}
+.dark_mode .summary_show li,
+.dark_mode .dashboard_body li {
+    background: #181818 !important;
+    color: rgb(199,199,199);
+    box-shadow:  10px 10px 5px #181818 !important;
+
+}
 .summary_show li:hover {
-    background: rgba(255, 104, 3, 0.541);
-    border: solid 1px rgb(255, 104, 3);
+    background: rgba(255, 104, 3, 0.541) !important;
+    border: solid 1px rgb(255, 104, 3) !important;
     cursor: pointer;
 }
 
 .data_from_graphical li:hover {
-    background: rgba(255, 104, 3, 0.541);
-    border: solid 1px rgb(255, 104, 3);
+    background: rgba(255, 104, 3, 0.541) !important;
+    border: solid 1px rgb(255, 104, 3) !important;
     cursor: pointer;
 }
 
@@ -140,6 +175,14 @@
     max-width: 40rem;
     max-height: 25rem;
     position: relative;
+}
+.monokai_mode #myBarChart{
+    background-color: #1E1F1C !important;
+}
+.dark_mode #myBarChart{
+    background-color: #181818 !important;
+    border: solid 1px rgba(192, 192, 192, 0.781);
+
 }
 
 .data_from_graphical {
