--- a/resources/products.css
+++ b/resources/products.css
@@ -2,6 +2,14 @@
     grid-template-columns: unset;
     background-color: rgba(199, 199, 199, 0.623);
 }
+.monokai_mode .middle_side{
+    background-color: #47493e;
+    color: rgb(199, 199, 199);
+}
+.dark_mode .middle_side{
+    background-color: #1F1F1F;
+    color: rgb(199, 199, 199);
+}
 
 .myproducts {
     margin: 5.2rem 0 0 4.1rem;
@@ -24,6 +32,16 @@
     outline: solid 1px rgba(128, 127, 127, 0.822);
     border-radius: .8rem;
     padding: 0 1rem 0 2rem;
+}
+.monokai_mode #findExec{
+    background-color: #1E1F1C;
+    color: rgb(199, 199, 199);
+
+}
+.dark_mode #findExec{
+    background-color: #181818;
+    color: rgb(199, 199, 199);
+
 }
 .find_prod > *:nth-child(2){
     position: relative;
@@ -86,6 +104,8 @@
     gap: 3%;
     padding: .4rem .4rem;
     grid-template-columns: 3rem 8rem 4.5rem 4.5rem 2.5rem 2rem;
+    position: relative;
+    z-index: 1;
     align-items: center;
 
 }
@@ -103,6 +123,12 @@
     border: solid 1px rgba(199, 199, 199, 0.623);
     position: relative;
 }
+.monokai_mode .myprod_container li{
+    background-color: #1E1F1C;
+}
+.dark_mode .myprod_container li{
+    background-color: #181818;
+}
 .myprod_container li:hover{
     background-color: rgba(255, 104, 3, 0.418);
     border: solid 1px rgb(255, 104, 3);
@@ -113,8 +139,8 @@
 }
 .myprod_container li > *:nth-child(6) i{
     height: 1.5rem;
-    display: grid;
     color: rgba(128, 127, 127, 0.822);
+    display: grid;
     place-items: center;
     position: absolute;
     top: 50%;
@@ -123,7 +149,19 @@
     width: 1.5rem;
     background-color: rgba(199, 199, 199, 0.308);
     border-radius: 50%;
-    border: solid 1px rgba(0, 0, 0, 0.171);
+    border: solid 1px rgba(66, 66, 66, 0.171);
+}
+.monokai_mode .myprod_container li > *:nth-child(6) i{
+    background-color: #484b42d2;
+    border: solid 1px rgba(150, 150, 150, 0.514);
+    color: rgba(189, 187, 187, 0.822);
+
+}
+.dark_mode .myprod_container li > *:nth-child(6) i{
+    background-color: #484b42d2;
+    border: solid 1px rgba(150, 150, 150, 0.514);
+    color: rgba(189, 187, 187, 0.822);
+
 }
 .myprod_container li > *:nth-child(6) i:hover{
     cursor: pointer;
@@ -139,6 +177,12 @@
     border-radius: 50%;
     overflow: hidden;
     border: solid 1px rgba(0, 0, 0, 0.226);
+}
+.monokai_mode .myprod_container li .dp,
+.dark_mode .myprod_container li .dp{
+    border: solid 1px rgba(165, 164, 164, 0.514) !important;
+
+    
 }
 .myprod_container li img{
     height: 2rem;
@@ -164,6 +208,7 @@
     margin-top: 5rem;
     gap: .5rem;
 
+
 }
 
 #body_Pnav_cat .on_nav_select {
@@ -183,6 +228,8 @@
     opacity: 1;
 }
 #body_Pnav_cat li {
+    position: relative;
+    z-index: 1;
     opacity: 50%;
     font-size: .75rem;
     height: 1.8rem;
@@ -195,6 +242,16 @@
     place-items: center;
     list-style: none;
     background-color: rgb(206, 206, 206);
+
+}
+.monokai_mode #body_Pnav_cat li {
+    background-color: #1E1F1C ;
+    border: solid 1px rgba(165, 164, 164, 0.514) !important;
+
+}
+.dark_mode #body_Pnav_cat li {
+    background-color: #181818 ;
+    border: solid 1px rgba(165, 164, 164, 0.514) !important;
 
 }
 #addProduct{
@@ -210,6 +267,12 @@
     grid-template-columns: unset;
     font-size: .9rem;
     cursor: pointer;
+}
+.monokai_mode #addProduct{
+    background-color: #343631 ;
+}
+.dark_mode #addProduct{
+    background-color: #36363688 ;
 }
 #addProduct:hover{
     background-color: rgba(255, 104, 3, 0.418);
