--- a/resources/style.css
+++ b/resources/style.css
@@ -6,6 +6,14 @@
 a {
     text-decoration: none;
 }
+.monokai_mode #header {
+    background-color:#1E1F1C !important;
+    color: rgb(199, 199, 199);
+}
+.dark_mode #header {
+    background-color:#181818 !important;
+    color: rgb(199, 199, 199);
+}
 
 body {
     height: 100vh;
@@ -19,6 +27,14 @@ body {
     width: 100%;
     border-bottom: rgba(0, 0, 0, 0.233) 2px solid;
     position: absolute;
+}
+.monokai_mode #header{
+    border-bottom: rgba(136, 136, 136, 0.315) 1px solid;
+    
+}
+.dark_mode #header{
+    border-bottom: rgba(136, 136, 136, 0.315) 1px solid;
+    
 }
 
 .header_inner {
@@ -42,36 +58,50 @@ body {
 }
 
 #header section #search {
-    border-radius: .4rem;
-    border: solid 1px rgb(189, 189, 189);
-    padding: 0 1rem;
+    border-radius: 1rem;
+    outline: solid 1px rgb(189, 189, 189);
+    padding: 0 2.4rem 0 1rem  ;
     font-size: 1rem;
     width: 100%;
     min-width: 2rem;
     height: 2.4rem;
+    border: none;
+}
+.monokai_mode #search {
+    outline: solid 1px #62665c !important;
+    background-color: #1E1F1C;
+    color: rgb(199, 199, 199);
+}
+.dark_mode #search {
+    outline: solid 1px #62665c !important;
+    background-color: #181818;
+    color: rgb(199, 199, 199);
 }
 
-#header section .search {
+.search {
     position: relative;
-    display: grid;
-    place-items: end;
+    /* place-items: end; */
 }
 
-#header section .search img {
+.search i {
+    right: .3rem;
+    position: absolute;
+    height: fit-content;
     cursor: text;
     top: 50%;
-    right: -1%;
     transform: translate(-50%, -50%);
-    position: absolute;
-    height: 1.5rem;
-    width: 1.5rem;
 }
 
 #header section #search:focus {
-    border: solid 1px black;
+    outline: solid 1px black;
 
 }
-
+.monokai_mode #search:focus {
+    outline: solid 1px #9b9b9b !important;
+}
+.dark_mode #search:focus {
+    outline: solid 1px #9b9b9b !important;
+}
 #header section:nth-child(2) {
     width: 30%;
     display: flex;
@@ -90,6 +120,17 @@ body {
     height: 2.5rem;
     display: grid;
     place-items: center;
+
+}
+.monokai_mode #header section:nth-child(2)>* {
+    background-color: #47493e;
+    border: solid 1px rgba(136, 136, 136, 0.315);
+color: rgb(199, 199, 199);
+}
+.dark_mode #header section:nth-child(2)>* {
+    color: rgb(199, 199, 199);
+    background-color: #181818;
+    border: solid 1px rgba(136, 136, 136, 0.315);
 
 }
 
@@ -141,10 +182,25 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #A27C12;
-    border: solid rgb(161, 161, 161) 1px;
-    background-color: rgb(255, 255, 255);
+    background-color: #ffffff;
+    border: 1px rgb(161, 161, 161) ;
     border-radius: 0 1rem 0 0;
+}
+.monokai_mode .side_nav{
+    color: rgb(199, 199, 199);
+    
+}
+.monokai_mode .side_nav2d{
+    background-color: #1E1F1C;
+    border: solid 1px rgba(136, 136, 136, 0.589) !important;
+    /* border: solid #47493e 1px; */
+
+}
+.dark_mode .side_nav2d{
+    background-color: #181818;
+    border: solid 1px rgba(136, 136, 136, 0.589) !important;
+    /* border: solid #47493e 1px; */
+    color: rgb(199, 199, 199);
 
 }
 
@@ -264,7 +320,12 @@ body {
     overflow: hidden;
     padding-top: 4rem;
 }
-
+.monokai_mode .products{
+    background-color: #47493e;
+} 
+.dark_mode .products{
+    background-color: #1F1F1F;
+} 
 /* third column */
 
 .counting {
@@ -272,6 +333,16 @@ body {
     background-color: rgb(255, 255, 255);
     height: 100%;
     border-left: solid rgba(0, 0, 0, 0.233) 2px;
+}
+.monokai_mode .counting{
+    background-color: #1E1F1C;
+    border-left:solid 1px rgba(189, 189, 189, 0.459) ;
+
+}
+.dark_mode .counting{
+    background-color: #181818;
+    border-left:solid 1px rgba(189, 189, 189, 0.459) ;
+
 }
 
 .middle_side {
@@ -298,7 +369,7 @@ body {
 .category_nav {
     height: fit-content;
     border-radius: .5rem;
-    border: solid rgb(189, 189, 189) 1px;
+    border: solid rgba(136, 136, 136, 0.589) 1px;
     background-color: white;
     place-items: center;
     padding: .8rem 2.5rem .8rem 1rem;
@@ -306,6 +377,14 @@ body {
     position: relative;
     width: 96%;
     overflow: hidden;
+}
+.monokai_mode .category_nav{
+    background-color: #1E1F1C !important;
+    color: rgb(199, 199, 199);
+}
+.dark_mode .category_nav{
+    background-color: #181818 !important;
+    color: rgb(199, 199, 199);
 }
 
 .category_nav_inner {
@@ -318,6 +397,7 @@ body {
 }
 
 .category_nav_inner li {
+    border: solid 1px rgba(136, 136, 136, 0) ;
     cursor: pointer;
     border-radius: .3rem;
     padding: .2rem .8rem;
@@ -327,8 +407,8 @@ body {
 
 .prod_nav {
     background-color: rgba(255, 104, 3, 0.329);
-    outline: solid 1px rgba(255, 104, 3, 0.795);
-    border: none;
+    border: solid 1px;
+    border-color: rgba(255, 104, 3, 0.795) !important;
 
 }
 
@@ -348,6 +428,13 @@ body {
     background-color: rgb(161, 161, 161);
     width: 2em;
 }
+.monokai_mode #allcategory_open{
+    background-color: #595a4e !important;
+}
+.dark_mode #allcategory_open{
+    background-color: #181818 !important;
+    border-left:solid 1px rgba(136, 136, 136, 0.589) ;
+}
 
 #allcategory_open img {
     height: 1rem;
@@ -355,14 +442,22 @@ body {
 }
 
 #allcategory_open:hover {
-    background-color: rgb(189, 189, 189);
+    background-color: #8c8d80 !important;
+    cursor: pointer;
+}
+.dark_mode #allcategory_open:hover {
+    background-color: #1818184d !important;
     cursor: pointer;
 }
 
 .category_nav_inner::-webkit-scrollbar {
     display: none;
 }
+.dark_mode .totaling select{
+    background-color: #181818;
+    color: rgb(199, 199, 199);
 
+}
 .category_nav li {
     list-style: none;
     font-size: .9rem;
@@ -375,7 +470,7 @@ body {
 }
 
 .header_inner section:nth-child(2) li:hover {
-    background-color: rgb(189, 189, 189) !important;
+    background-color: rgba(255, 104, 3, 0.329) !important;
     cursor: pointer;
 
 }
@@ -423,6 +518,18 @@ img {
     flex-direction: column;
     list-style: none;
     border-radius: .5rem;
+
+}
+.monokai_mode .products_content ol{
+    background-color: #1E1F1C;
+    color:rgb(199, 199, 199) ;
+    border: solid 1px rgba(189, 189, 189, 0.445);
+
+}
+.dark_mode .products_content ol{
+    background-color: #181818;
+    color:rgb(199, 199, 199) ;
+    border: solid 1px rgba(189, 189, 189, 0.445);
 
 }
 
@@ -479,7 +586,7 @@ img {
     scrollbar-width: thin;
     scrollbar-gutter: stable;
 }
-
+ 
 
 
 #counter_body ol {
@@ -492,16 +599,41 @@ img {
 
 
 }
+.monokai_mode #counter_body {
+    border-bottom: solid 1px rgba(189, 189, 189, 0.445) !important;
+
+}
+.dark_mode #counter_body {
+    border-bottom: solid 1px rgba(189, 189, 189, 0.445) !important;
+    background-color: #181818;
+    color: rgb(199, 199, 199);
+}
+.monokai_mode #counter_body ol{
+    border-bottom: solid 1px rgba(189, 189, 189, 0.445) !important;
+
+}
+.dark_mode #counter_body ol{
+    border-bottom: solid 1px rgba(189, 189, 189, 0.445) !important;
+    background-color: #181818;
+    color: rgb(199, 199, 199);
+}
 
 .bxselected {
     transition: .3s;
     box-shadow: -.2rem .1rem .1rem #A27C12;
-    background-color: rgba(173, 173, 173, 0.26) !important;
+    background-color: rgba(179, 179, 179, 0.151) !important;
 
+}
+.monokai_mode .bxselected{
+    box-shadow: -.2rem .1rem .1rem #A27C12;
+    
 }
 
 #counter_body ol:hover {
     background-color: rgba(216, 216, 216, 0.425);
+}
+.monokai_mode #counter_body ol:hover {
+    background-color: rgba(179, 179, 179, 0.151);
 }
 
 #counter_body ol li:nth-child(1) {
@@ -564,7 +696,18 @@ img {
     padding: 0 1rem;
     height: 1.8rem;
 }
-
+.monokai_mode .qntity input{
+    background-color: #1E1F1C;
+    border: none;
+    outline: solid 1px rgba(161, 161, 161, 0.39);
+    color: rgb(199, 199, 199);
+}
+.dark_mode .qntity input{
+    background-color: #181818;
+    border: none;
+    outline: solid 1px rgba(161, 161, 161, 0.39);
+    color: rgb(199, 199, 199);
+}
 .quantityShow {
     height: 5rem !important;
     transition: .1s;
@@ -576,15 +719,12 @@ img {
 }
 
 .arrow {
-    transform: rotate(90deg);
+    transform: rotate(90deg) !important;
     transition: .4s;
 }
 
-#counter_body ol p img {
-    height: .9rem;
-}
 
-#counter_body i {
+#counter_body div i {
     transform: scale(1.1);
     cursor: pointer;
     display: grid;
@@ -617,8 +757,17 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: start;
+    gap: .2rem;
 }
 
+.monokai_mode .totaling{
+    background-color: #47493e;
+    color: rgb(199, 199, 199);
+}
+.dark_mode .totaling{
+    background-color: #1F1F1F;
+    color: rgb(199, 199, 199);
+}
 .totaling section {
     display: flex;
     justify-content: space-between;
