--- a/resources/products.css
+++ b/resources/products.css
@@ -1,31 +1,33 @@
 .middle_side {
     grid-template-columns: unset;
-    background-color: rgba(199, 199, 199, 0.623);
-}
-.monokai_mode .middle_side{
-    background-color: #47493e;
-    color: rgb(199, 199, 199);
-}
-.dark_mode .middle_side{
-    background-color: #1F1F1F;
-    color: rgb(199, 199, 199);
+    /* background-color: rgba(199, 199, 199, 0.623);
+     */
+    /* background:url(../image/css-pattern-by-magicpattern.png) no-repeat  ;
+    background-position: center;
+    background-size: cover; */
+ 
 }
 
+
+
 .myproducts {
-    margin: 5.2rem 0 0 4.1rem;
     position: relative;
+    height: 100dvh;
 }
-#logo_prod{
+
+#logo_prod {
     height: 5rem;
 }
-.find_prod{
+
+.find_prod {
     display: grid;
     justify-content: center;
     place-items: center;
     margin-bottom: 2rem;
 
 }
-#findExec{
+
+#findExec {
     height: 2.5rem;
     width: 18rem;
     border: none;
@@ -33,34 +35,40 @@
     border-radius: .8rem;
     padding: 0 1rem 0 2rem;
 }
-.monokai_mode #findExec{
+
+.monokai_mode #findExec {
     background-color: #1E1F1C;
     color: rgb(199, 199, 199);
+    outline: solid 1px rgb(128 127 127 / 26%);
 
 }
-.dark_mode #findExec{
+
+.dark_mode #findExec {
     background-color: #181818;
     color: rgb(199, 199, 199);
+    outline: solid 1px rgb(128 127 127 / 26%);
+}
+
+.find_prod>*:nth-child(2) {
+    position: relative;
 
 }
-.find_prod > *:nth-child(2){
-    position: relative;
-    
-}
-.find_prod i{
+
+.find_prod i {
     position: absolute;
     top: 50%;
     left: 1.2rem;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 
 }
 
 
-.find_prod > *{
+.find_prod>* {
     width: fit-content;
 
 }
-#content_products{
+
+#content_products {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -75,9 +83,9 @@
     padding-bottom: 3rem;
     scrollbar-width: thin;
 }
-.myprod_container{
+
+.myprod_container {
     width: 100%;
-    height: 100%;
     /* display: grid; */
     place-items: start;
     justify-content: center;
@@ -89,12 +97,14 @@
     font-weight: 800;
     margin-bottom: .2rem;
 }
-.myprod_container ol > *:nth-child(1){
+
+.myprod_container ol>*:nth-child(1) {
     text-align: center;
 }
 
 
-.myprod_container ol,.myprod_container li{
+.myprod_container ol,
+.myprod_container li {
     list-style: none;
     width: 80%;
     min-width: 30rem;
@@ -109,13 +119,15 @@
     align-items: center;
 
 }
-.myprod_inner{
+
+.myprod_inner {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.myprod_container li{
+
+.myprod_container li {
     font-size: .8rem;
     background-color: white;
     padding: .3rem .4rem;
@@ -123,21 +135,28 @@
     border: solid 1px rgba(199, 199, 199, 0.623);
     position: relative;
 }
-.monokai_mode .myprod_container li{
+
+.monokai_mode .myprod_container li {
     background-color: #1E1F1C;
+    border: solid 1px rgb(199 199 199 / 17%);
 }
-.dark_mode .myprod_container li{
+
+.dark_mode .myprod_container li {
     background-color: #181818;
+    border: solid 1px rgb(199 199 199 / 17%);
 }
-.myprod_container li:hover{
+
+.myprod_container li:hover {
     background-color: rgba(255, 104, 3, 0.418);
     border: solid 1px rgb(255, 104, 3);
     transition: .2s;
 }
-.myprod_container li > *:nth-child(6){
+
+.myprod_container li>*:nth-child(6) {
     position: relative;
 }
-.myprod_container li > *:nth-child(6) i{
+
+.myprod_container li>*:nth-child(6) i {
     height: 1.5rem;
     color: rgba(128, 127, 127, 0.822);
     display: grid;
@@ -145,31 +164,35 @@
     position: absolute;
     top: 50%;
     right: 0;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 1.5rem;
     background-color: rgba(199, 199, 199, 0.308);
     border-radius: 50%;
     border: solid 1px rgba(66, 66, 66, 0.171);
 }
-.monokai_mode .myprod_container li > *:nth-child(6) i{
+
+.monokai_mode .myprod_container li>*:nth-child(6) i {
     background-color: #484b42d2;
     border: solid 1px rgba(150, 150, 150, 0.514);
     color: rgba(189, 187, 187, 0.822);
 
 }
-.dark_mode .myprod_container li > *:nth-child(6) i{
+
+.dark_mode .myprod_container li>*:nth-child(6) i {
     background-color: #484b42d2;
     border: solid 1px rgba(150, 150, 150, 0.514);
     color: rgba(189, 187, 187, 0.822);
 
 }
-.myprod_container li > *:nth-child(6) i:hover{
+
+.myprod_container li>*:nth-child(6) i:hover {
     cursor: pointer;
     color: white;
     background-color: rgba(131, 131, 131, 0.555);
     transition: .2s;
 }
-.myprod_container li .dp{
+
+.myprod_container li .dp {
     height: 3rem;
     width: 3rem;
     display: grid;
@@ -178,13 +201,15 @@
     overflow: hidden;
     border: solid 1px rgba(0, 0, 0, 0.226);
 }
+
 .monokai_mode .myprod_container li .dp,
-.dark_mode .myprod_container li .dp{
+.dark_mode .myprod_container li .dp {
     border: solid 1px rgba(165, 164, 164, 0.514) !important;
 
-    
+
 }
-.myprod_container li img{
+
+.myprod_container li img {
     height: 2rem;
     width: 2rem;
 }
@@ -215,18 +240,20 @@
     width: 8rem;
     opacity: 1;
     font-size: .9rem;
-    background-color:  rgba(255, 104, 3, 0.644);
+    background-color: rgba(255, 104, 3, 0.644);
     border: solid 1px rgb(255, 104, 3);
     box-shadow: -.15rem .15rem rgb(255, 104, 3);
 
 
 }
-#body_Pnav_cat li:hover{
-    background-color:  rgba(255, 104, 3, 0.644);
+
+#body_Pnav_cat li:hover {
+    background-color: rgba(255, 104, 3, 0.644);
     transition: .2s;
     cursor: pointer;
     opacity: 1;
 }
+
 #body_Pnav_cat li {
     position: relative;
     z-index: 1;
@@ -244,17 +271,20 @@
     background-color: rgb(206, 206, 206);
 
 }
+
 .monokai_mode #body_Pnav_cat li {
-    background-color: #1E1F1C ;
+    background-color: #1E1F1C;
     border: solid 1px rgba(165, 164, 164, 0.514) !important;
 
 }
+
 .dark_mode #body_Pnav_cat li {
-    background-color: #181818 ;
+    background-color: #181818;
     border: solid 1px rgba(165, 164, 164, 0.514) !important;
 
 }
-#addProduct{
+
+#addProduct {
     list-style: none;
     padding: .8rem .4rem;
     background-color: rgba(255, 255, 255, 0.288);
@@ -268,31 +298,378 @@
     font-size: .9rem;
     cursor: pointer;
 }
-.monokai_mode #addProduct{
-    background-color: #343631 ;
+
+.monokai_mode #addProduct {
+    background-color: #343631;
 }
-.dark_mode #addProduct{
-    background-color: #36363688 ;
+
+.dark_mode #addProduct {
+    background-color: #36363688;
 }
-#addProduct:hover{
+
+#addProduct:hover {
     background-color: rgba(255, 104, 3, 0.418);
     border: solid 1px rgb(255, 104, 3);
 
 }
-#addProduct i{
+
+#addProduct i {
     animation-name: rotex;
     animation-duration: 1s;
     display: inline-block;
     animation-iteration-count: infinite;
     font-size: 1.3rem;
 }
-#addProduct:hover i{
+
+#addProduct:hover i {
     transition: .2s;
-    transform: rotate(90deg) ;
+    transform: rotate(90deg);
 }
+
 @keyframes rotex {
+    0% {
+        transform: rotate(90deg);
+    }
+}
+#header,
+.side_nav{
+    z-index: 3;
+}
+#addProductForm{
+    z-index: 2;
+    /* display: none; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);    
+}
+#canc {
+    position: absolute;
+    top: -.9rem;
+    padding: .4rem 1rem;
+    border-radius: .4rem .4rem 0 0 ;
+    background-color: rgb(146, 145, 145);
+    right: -1rem;
+    color: white;
+    transform: translate(-50%,-50%) ;
+    border: none;
+}
+#canc:hover {
+    background-color: rgba(148, 3, 3, 0.699);
+}
+#canc i{
+transform: rotate(45deg);
+}
+#submit_form{
+    background:linear-gradient(90deg,rgb(255, 255, 255),rgb(255, 255, 255), rgb(255, 255, 255)) ;
+
+    border-radius: .5rem;
+    height: fit-content;
+    max-width: 60%;
+    padding: 2rem 1rem;
+    position: relative;
+    margin: 10rem ;
+    border: solid 1px  rgba(0, 0, 0, 0.349);
+    animation-name: showAddProdForm;
+    animation-duration: .5s;
+    animation-iteration-count: 1;
+}
+
+@keyframes showAddProdForm {
     0%{
-        transform: rotate(90deg) ;
+        opacity: 50%;
+        transform: translateX(2rem) rotate(9deg);
     }
 }
 
+
+
+.dark_mode #submit_form{
+    background:linear-gradient(90deg,#424242,#1F1F1F, #1F1F1F) ;
+    border: solid 1px  rgba(228, 228, 228, 0.349);
+
+}
+.dark_mode #submit_form:hover{
+    background:linear-gradient(90deg,rgb(117, 117, 117),#1F1F1F, #1F1F1F) ;
+
+}
+#submit_form:hover{
+    background:linear-gradient(90deg,rgb(255, 174, 120),rgb(255, 255, 255), rgb(255, 255, 255)) ;
+
+}
+.dark_mode #submit_form select,
+.dark_mode #submit_form input{
+    color: white !important;
+    background-color: rgba(0, 0, 0, 0.329) !important;
+}
+.dark_mode #submit_prod{
+    color: white;
+    background-color: #383838;
+    outline: solid 1px rgba(119, 119, 119, 0.596);
+}
+.dark_mode #submit_prod:hover{
+    outline-color: rgb(255, 104, 3);   
+    background-color: rgba(255, 104, 3, 0.644);
+
+}
+#submit_form li{
+    list-style: none;
+}
+
+#submit_form > *:nth-child(2){
+    display: grid;
+    grid-template-columns: 10rem 10rem;
+    justify-content: center;
+}
+#submit_form > *:nth-child(2) ol:nth-child(1){
+    height: 10rem;
+    display: grid ;
+    place-items: center;
+}
+#submit_form > *:nth-child(2) ol:nth-child(1) li{
+    height: 90%;
+    width:  90%;
+    background-color: rgb(199, 199, 199);
+    border-radius: 50%;
+    border: solid 1px rgba(128, 127, 127, 0.822);
+    position: relative;
+}
+#submit_form > *:nth-child(2) ol:nth-child(1) li > div{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    border-radius: 50%;
+    
+}
+#submit_form > *:nth-child(2) ol:nth-child(1) li img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: 85%;
+    width: 85%;
+}
+#submit_form > *:nth-child(2) ol:nth-child(1) li i{
+    position: absolute;
+    bottom: .8rem;
+    right: 0rem;
+    color: white;
+    border: solid 1px rgba(128, 127, 127, 0.822);
+    padding: .5rem;
+    background-color: rgb(126, 125, 125);
+    border-radius: 50%;
+    transition: .3s;
+}
+#submit_form > *:nth-child(2) ol:nth-child(1) li i:hover{
+    transform: rotate(90deg) scale(.9);
+    background-color: rgb(172, 171, 171);
+}
+#submit_form > *:nth-child(2) ol:nth-child(2){
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .8rem;
+}
+#submit_form > *:nth-child(2) ol:nth-child(2) li {
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+}
+#submit_form > *:nth-child(3) ol li div,
+#submit_form > *:nth-child(2) ol:nth-child(2) li div{
+    position: relative;
+}
+#submit_form > *:nth-child(3) ol:nth-child(1) li {
+    width: fit-content;
+}
+#submit_form > *:nth-child(3) ol{
+    display: flex;
+    justify-content: center;
+    gap: 2.1rem;
+
+}
+#submit_form > *:nth-child(3) ol:nth-child(1){
+    margin: .5rem 0 1rem;
+}
+
+#prod_name{
+    width: 20rem !important;
+}
+#submit_form > *:nth-child(3) ol li i,
+#submit_form > *:nth-child(2) ol:nth-child(2) li i{
+    position: absolute;
+    top: 50%;
+    left: .8rem;
+    transform: translate(-50%,-50%);
+    font-size: .9rem;
+}
+#submit_form > *:nth-child(2) ol:nth-child(2) li{
+    transform: translateX(.4rem);
+
+}
+#submit_form > *:nth-child(2) ol:nth-child(2) li input{
+    width: 9rem;
+}
+#submit_form > *:nth-child(3) ol li select,
+#submit_form > *:nth-child(3) ol li input,
+#submit_form > *:nth-child(2) ol:nth-child(2) li input{
+    border-radius: .4rem;
+    border: none;
+    outline: solid 1px rgba(163, 163, 163, 0.548);
+    height: 2.5rem;
+    background-color: rgba(214, 214, 214, 0.466);
+    padding: 0 1rem 0 1.5rem;
+    display: inline-block;
+}
+
+#submit_form > *:nth-child(3) ol li input,
+#submit_form > *:nth-child(3) ol li select{
+    width: 9rem;
+}
+#submit_form > * li p{
+    font-size: .7rem;
+    margin-top: .2rem;
+    transform: translateX(.5rem);
+} 
+/* #submit_form > *:nth-child(2) ol{
+    border: solid 1px red;
+    
+} */
+
+
+.label_style{
+    top: 50%;
+    transform: translate(-50%,-50%) rotate(-90deg);
+    width: fit-content;
+    height: fit-content;
+    /* width: 10rem; */
+    width: 100%;
+    text-align: center  ;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    left: -2rem;
+    position: absolute;
+}
+.label_style h3{
+    padding: .5rem 1rem;
+    width: fit-content;
+    border-radius: .4rem;
+    border: solid 1px rgba(65, 65, 65, 0.596);
+    background-color: white;
+    transition: .3s;
+    font-variant: small-caps;
+    text-transform: lowercase;
+}
+.newlabel_style{
+    display: flex;
+    animation-name: showSideUi;
+    animation-duration: .5s;
+    animation-iteration-count: 1;
+}
+
+
+@keyframes showSideUi {
+    0%{
+        opacity: 0;
+    }
+}
+#submit_form:hover .label_style h3{
+    background-color: rgb(161, 67, 4);
+}
+.dark_mode .label_style h3{
+    background-color: #2b2b2b;
+    border: solid 1px rgba(201, 201, 201, 0.534);
+
+}
+.label_style p{
+    height: .15rem;
+    width: 5rem;
+    background-color: rgb(255, 104, 3);
+    position: relative;
+}
+.label_style p:nth-child(1)::before{
+    position: absolute;
+    background-color: rgb(212, 88, 5);
+    content: "";
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 50%;
+    box-shadow: 0 0 1.2rem .8rem rgb(255, 104, 3);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(-50%,-50%);
+}
+.label_style p:nth-child(3)::after{
+    position: absolute;
+    background-color: rgb(212, 88, 5);
+    content: "";
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 50%;
+    box-shadow: 0 0 1.2rem .8rem rgb(255, 104, 3);
+    position: absolute;
+    top: 50%;
+    right: -1.5rem;
+    transform: translate(-50%,-50%);
+}
+.add_cont_button{
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+}
+.add_cont_button button{
+    padding: .7rem 2rem .7rem 2.5rem;
+    border-radius: .4rem;
+    border: none;
+    outline: solid 1px rgba(65, 65, 65, 0.596);
+    position: relative;
+}
+.add_cont_button button:hover{
+    background-color: rgba(255, 104, 3, 0.644);
+    outline-color: rgb(255, 104, 3);   
+}
+.add_cont_button button:hover i{
+    color: white;
+    transform: rotate(90deg);
+}
+#submit_prod i{
+    left: 1rem;
+    position: absolute;
+    font-size: .9rem;
+    transition: .3s;
+    
+}
+
+#overlay_prod{
+    display: none;
+    background-color: #000000a1;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 2;
+}
+
+.response{
+    position: absolute;
+    height: fit-content ;
+    width: 15rem;
+    text-align: center;
+    padding: .5rem 1rem;
+    background-color: #ffffff;
+    color: black;
+    top: 101%;
+    right: 0;
+    border-radius: 0 0 .4rem .4rem;
+    border-bottom: solid 1px rgba(141, 141, 141, 0.788);
+    border-left: solid 1px rgba(141, 141, 141, 0.788);
+    border-right: solid 1px rgba(141, 141, 141, 0.788);
+}
+.dark_mode .response{
+    background-color: #000000a1;
+    color: rgb(206, 206, 206);
+
+}
