--- a/resources/style.css
+++ b/resources/style.css
@@ -1,14 +1,26 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+.monokai_mode .middle_side {
+    background-color: #47493e;
+    color: rgb(199, 199, 199);
 }
 
+
+.dark_mode .middle_side {
+    background-color: #1F1F1F;
+    background-image: radial-gradient(rgb(255, 255, 255) 0.5px,#1F1F1F 0.5px);
+    background-size: 35px 35px;
+    color: rgb(199, 199, 199);
+}
 a {
     text-decoration: none;
 }
 .monokai_mode #header {
     background-color:#1E1F1C !important;
-    color: rgb(199, 199, 199);
+    color: rgb(199, 199, 199) ;
 }
 .dark_mode #header {
     background-color:#181818 !important;
@@ -68,12 +80,12 @@ body {
     border: none;
 }
 .monokai_mode #search {
-    outline: solid 1px #62665c !important;
+    outline: solid 1px #62665c80 !important;
     background-color: #1E1F1C;
     color: rgb(199, 199, 199);
 }
 .dark_mode #search {
-    outline: solid 1px #62665c !important;
+    outline: solid 1px #62665c80 !important;
     background-color: #181818;
     color: rgb(199, 199, 199);
 }
@@ -315,17 +327,16 @@ color: rgb(199, 199, 199);
 
 .products {
     padding-left: 4.2rem;
-    background-color: rgb(221, 221, 221);
     height: 100vh;
     overflow: hidden;
     padding-top: 4rem;
 }
-.monokai_mode .products{
+/* .monokai_mode .products{
     background-color: #47493e;
 } 
 .dark_mode .products{
     background-color: #1F1F1F;
-} 
+}  */
 /* third column */
 
 .counting {
@@ -529,7 +540,7 @@ img {
 .dark_mode .products_content ol{
     background-color: #181818;
     color:rgb(199, 199, 199) ;
-    border: solid 1px rgba(189, 189, 189, 0.445);
+    border: solid 1px rgb(189 189 189 / 26%);
 
 }
 
@@ -609,11 +620,13 @@ img {
     color: rgb(199, 199, 199);
 }
 .monokai_mode #counter_body ol{
-    border-bottom: solid 1px rgba(189, 189, 189, 0.445) !important;
-
+    border:solid 1px rgb(189 189 189 / 26%) !important;
+    background-color: #1E1F1C;
+    color: rgb(199, 199, 199);
+    
 }
 .dark_mode #counter_body ol{
-    border-bottom: solid 1px rgba(189, 189, 189, 0.445) !important;
+    border:solid 1px rgb(189 189 189 / 26%) !important;
     background-color: #181818;
     color: rgb(199, 199, 199);
 }
@@ -737,7 +750,7 @@ img {
     background-color: rgba(161, 161, 161, 0.219);
 }
 
-#counter_body i:hover {
+#counter_body li > *:nth-child(5) i:hover {
     transition: .3s;
     background-color: rgba(161, 161, 161, 0.568);
 
