--- a/resources/cashier.css
+++ b/resources/cashier.css
@@ -1,3 +1,112 @@
 
 
 
+
+
+
+
+.removeItem{
+    animation-duration: .4s;
+    animation-iteration-count: 1;
+    animation-name: rmitem;
+
+}
+
+
+@keyframes rmitem {
+    50%{
+        opacity: 0;
+        transform: translateX(-110%);
+    }
+}
+
+.counter-header{
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 2rem 1rem 2.5rem;
+}
+.counter-header li:nth-child(1){
+    animation-duration: .7s;
+    animation-iteration-count: 1;
+    animation-name: cartUIParent1;
+}
+.counter-header li:nth-child(2){
+    animation-duration: .7s;
+    animation-iteration-count: 1;
+    animation-name: cartUIParent2;
+}
+.counter-header li{
+    position: relative;
+    list-style: none;
+}
+.counter-header li div{
+    position: absolute;
+    left: -1rem;
+    height: .7rem;
+    width: .7rem;
+    top: 50%;
+    border-radius: 50%;
+    transform: translate(-50%,-50%);
+    background-color: rgba(255, 104, 3, 0.795) ;
+
+}
+.noItem{
+    font-size: .9rem;
+    animation-duration: .7s;
+    animation-iteration-count: 1;
+    animation-name: cartUIParent1;
+}
+@keyframes cartUIParent1 {
+    0%{
+        opacity: 0;
+        transform: translate(-3rem);
+    }
+}
+@keyframes cartUIParent2 {
+    0%{
+        opacity: 0;
+        transform: translate(3rem);
+    }
+}
+.counter-header li div::after{
+    content: "";
+    position: absolute;
+    height: 1.8rem;
+    width: 1.8rem;
+    border-radius: 50%;
+    background-color: rgba(255, 104, 3, 0.219) ;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    animation-duration: .7s;
+    animation-iteration-count: infinite;
+    animation-name: cartUI;
+}
+
+@keyframes cartUI {
+    0%{
+        opacity: 0;
+        height: .5rem;
+        width: .5rem;
+    }
+}
+
+/* 
+#counter_body > *{
+    animation-duration: .7s;
+    animation-iteration-count: 1;
+    animation-name: cartUIOl;
+}
+
+@keyframes cartUIOl {
+    0%{
+        transform: translate(-2rem);
+        width: fit-content;
+    }
+}
+
+*/
+
+
