--- a/resources/products.css
+++ b/resources/products.css
@@ -673,9 +673,12 @@ transform: rotate(45deg);
 .response{
     position: absolute;
     height: fit-content ;
-    width: 15rem;
+    overflow: hidden;
+    max-width: 19rem;
+    min-width: 14rem;
+    width: fit-content;
     text-align: center;
-    padding: .5rem 1rem;
+    padding: .4rem 1rem .5rem;
     background-color: #ffffff;
     color: black;
     top: 101%;
@@ -684,6 +687,18 @@ transform: rotate(45deg);
     border-bottom: solid 1px rgba(141, 141, 141, 0.788);
     border-left: solid 1px rgba(141, 141, 141, 0.788);
     border-right: solid 1px rgba(141, 141, 141, 0.788);
+}
+.response > *{
+    margin-top: .1rem;
+    animation-name: responseEntry;
+    animation-duration: .7s;
+    animation-iteration-count: 1s;
+}
+@keyframes responseEntry {
+    0%{
+        opacity: 0;
+        transform: translateX(-2rem);
+    }
 }
 
 .monokai_mode .response{
