--- a/resources/products.css
+++ b/resources/products.css
@@ -69,19 +69,60 @@
 
 }
 
+#content_products-cont {
+    width: 110%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+
+}
+
+.loading_sc {
+    width: 100%;
+    display: flex;
+    gap: .4rem;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+
+
+.loading_sc div>* {
+    animation-name: loadingProd;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+@keyframes loadingProd {
+    50% {
+        opacity: 50%;
+    }
+}
+.loading_sc div>*:nth-child(1){
+    animation-delay: .3s;
+}
+.loading_sc div>*:nth-child(2){
+    animation-delay: .6s;
+}
+.loading_sc div>*:nth-child(3){
+    animation-delay: .9s;
+}
 #content_products {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
     width: 100%;
-    margin-left: .3rem;
+    overflow-x: hidden;
+    margin-top: .5rem;
     gap: .4rem;
-    padding: 0 .5rem;
+    margin-left: 1.4rem;
+    padding: 1.8rem .5rem 3rem;
     overflow-y: scroll;
     height: 52vh;
     max-height: 60vh;
-    padding-bottom: 3rem;
     scrollbar-width: thin;
 }
 
@@ -95,27 +136,111 @@
 }
 
 .myprod_container ol {
+    margin: 0 1rem;
+    z-index: 2 !important;
     font-weight: 800;
-    margin-bottom: .2rem;
+    background: #555555;
+    border-radius: .4rem .4rem 0 0;
+    /* margin-top: 1.8rem; */
+    transform: translateY(1.5rem);
+
+    /* border: solid 1px rgb(129 129 129 / 62%); */
 }
 
+
+#content_products li>*:nth-child(1),
 .myprod_container ol>*:nth-child(1) {
     text-align: center;
+    max-width: 5rem;
+    width: 100%;
+
+}
+
+#content_products-cont section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 1.4rem;
+    padding: 0 1.3rem 0 .5rem;
+}
+
+/* #content_products li > *:nth-child(1){
+    max-width: fit-content;
+    width:100%;
+} */
+.loading_sc div>*:nth-child(1) {
+    height: 3rem;
+    width: 3rem;
+}
+
+.myprod_container ol>*:nth-child(2),
+#content_products li>*:nth-child(2) {
+    width: 8rem;
+}
+
+.myprod_container ol>*:nth-child(3),
+#content_products li>*:nth-child(3) {
+    width: 5rem;
+}
+
+.myprod_container ol>*:nth-child(4),
+#content_products li>*:nth-child(4) {
+    width: 7rem;
 }
 
 
 
+.myprod_container ol>*:nth-child(5),
+#content_products li>*:nth-child(5) {
+    width: 3rem;
+}
+
+
+.myprod_container ol>*:nth-child(6),
+#content_products li>*:nth-child(6) {
+    width: 1.5rem;
+    flex: none;
+
+}
+
+.loading_sc div>*:nth-child(2) {
+    width: 85%;
+}
+
+
+.loading_sc div .dp {
+    flex: none;
+    height: 2.5rem !important;
+    width: 2.5rem !important;
+    border-radius: 50% !important;
+}
+
+.loading_sc div>* {
+    border-radius: .8rem;
+    height: .9rem;
+    background-color: #89898938;
+}
+
+.title {
+    width: 100%;
+    display: grid;
+    place-items: center;
+}
+
+
+
+.loading_sc>*,
 .myprod_container ol,
 #content_products li {
     list-style: none;
-    width: 80%;
-    min-width: 30rem;
-    max-width: 35rem;
-    display: grid;
-    justify-content: center;
-    gap: 3%;
-    padding: .4rem .4rem;
-    grid-template-columns: 3rem 8rem 4.5rem 4.5rem 2.5rem 2rem;
+    width: 70%;
+    min-width: 35rem;
+    display: flex;
+    justify-content: space-around;
+    gap: 3rem;
+    padding: .4rem .9rem;
     position: relative;
     z-index: 1;
     align-items: center;
@@ -129,15 +254,19 @@
     align-items: center;
 }
 
+.loading_sc>*,
 #content_products li {
     font-size: .8rem;
     background-color: white;
-    padding: .3rem .4rem;
+    padding: .7rem .9rem;
     border-radius: .6rem;
     border: solid 1px rgb(111 111 111 / 62%);
     position: relative;
 }
 
+
+
+.monokai_mode .loading_sc>*,
 .monokai_mode #content_products li,
 .monokai_mode .myprod_container li button {
     background: #1E1F1C !important;
@@ -145,6 +274,7 @@
     color: white;
 }
 
+.dark_mode .loading_sc>*,
 .dark_mode #content_products li,
 .dark_mode .myprod_container li button {
     color: rgb(199 199 199);
@@ -162,42 +292,39 @@
     position: relative;
 }
 
-.myprod_container li>*:nth-child(6) i {
+.myprod_container li>*:nth-child(6) {
     height: 1.5rem;
     color: rgba(128, 127, 127, 0.822);
     display: grid;
     place-items: center;
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translate(-50%, -50%);
     width: 1.5rem;
     background-color: rgba(199, 199, 199, 0.308);
     border-radius: 50%;
     border: solid 1px rgba(66, 66, 66, 0.171);
 }
 
-.monokai_mode .myprod_container li>*:nth-child(6) i {
+.monokai_mode .myprod_container li>*:nth-child(6) {
     background-color: #484b42d2;
     border: solid 1px rgba(150, 150, 150, 0.514);
     color: rgba(189, 187, 187, 0.822);
 
 }
 
-.dark_mode .myprod_container li>*:nth-child(6) i {
+.dark_mode .myprod_container li>*:nth-child(6) {
     background-color: #484b42d2;
     border: solid 1px rgba(150, 150, 150, 0.514);
     color: rgba(189, 187, 187, 0.822);
 
 }
 
-.myprod_container li>*:nth-child(6) i:hover {
+.myprod_container li>*:nth-child(6):hover {
     cursor: pointer;
     color: white;
     background-color: rgba(131, 131, 131, 0.555);
     transition: .2s;
 }
 
+.loading_sc div .dp,
 .myprod_container li .dp {
     height: 3rem;
     width: 3rem;
@@ -216,79 +343,15 @@
 }
 
 .myprod_container li img {
-    height: 2rem;
-    width: 2rem;
+    height: 3rem;
+    width: 3rem;
 }
 
 
 
 
 
-.Pnav_category {
-    position: absolute;
-    height: 100%;
-    right: 0;
-    top: 0;
-    width: fit-content;
-}
 
-#body_Pnav_cat {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    margin-top: 8rem;
-    gap: .5rem;
-
-
-}
-
-#body_Pnav_cat .on_nav_select {
-    width: 8rem;
-    opacity: 1;
-    font-size: .9rem;
-    background-color: rgba(255, 104, 3, 0.644);
-    border: solid 1px rgb(255, 104, 3);
-    box-shadow: -.15rem .15rem rgb(255, 104, 3);
-
-
-}
-
-#body_Pnav_cat li:hover {
-    background-color: rgba(255, 104, 3, 0.644);
-    transition: .2s;
-    cursor: pointer;
-    opacity: 1;
-}
-
-#body_Pnav_cat li {
-    position: relative;
-    z-index: 1;
-    opacity: 50%;
-    font-size: .75rem;
-    height: 1.8rem;
-    padding: 0 .5rem;
-    border: solid 1px rgba(0, 0, 0, 0.171);
-    width: 5rem;
-    border-radius: .5rem;
-    text-align: center;
-    display: grid;
-    place-items: center;
-    list-style: none;
-    background-color: rgb(206, 206, 206);
-
-}
-
-.monokai_mode #body_Pnav_cat li {
-    background-color: #1E1F1C;
-    border: solid 1px rgba(165, 164, 164, 0.514) !important;
-
-}
-
-.dark_mode #body_Pnav_cat li {
-    background-color: #181818;
-    border: solid 1px rgba(165, 164, 164, 0.514) !important;
-
-}
 
 
 #addCategory {
@@ -754,11 +817,13 @@
     gap: 1rem;
     align-items: center;
 }
-.add_cont_button a:hover{
+
+.add_cont_button a:hover {
     text-decoration: underline;
 }
+
 .add_cont_button button {
-    
+
     padding: .7rem 2rem .7rem 2.5rem;
     border-radius: .4rem;
     border: none;
@@ -844,7 +909,7 @@
 
 .action_select {
     z-index: 3;
-    right: -1rem;
+    right: -2.5rem;
     transform: translateX(3.3rem) translateY(-1rem);
     position: absolute;
     height: fit-content;
@@ -861,7 +926,8 @@
     animation-iteration-count: 1;
     color: #000000;
 }
-.action_selectNew{
+
+.action_selectNew {
     display: flex;
 }
 
@@ -935,7 +1001,7 @@
     animation-name: showAddProdForm;
     animation-duration: .5s;
     animation-iteration-count: 1;
-    
+
 }
 
 
@@ -1095,4 +1161,142 @@
     border-radius: .4rem;
     outline: solid 1px rgba(92, 92, 92, 0.438);
 
+}
+
+
+@media screen and (max-width:1023px) {
+
+    #content_products li>*:nth-child(1),
+    .myprod_container ol>*:nth-child(1) {
+        max-width: 3rem;
+
+    }
+
+    * {
+        cursor: default !important;
+    }
+}
+
+@media screen and (min-width:1024px) {
+    .myprod_container li img {
+        height: 4rem;
+        width: 4rem;
+    }
+
+    .myprod_container li .dp {
+        width: 4rem;
+        height: 4rem;
+        flex: none;
+    }
+
+    .loading_sc>*,
+    .myprod_container ol,
+    #content_products li {
+        padding: 1rem 2rem
+    }
+
+    .loading_sc>*,
+    #content_products li,
+    .myprod_container ol {
+        width: 60%;
+    }
+
+    #content_products li>*:nth-child(1),
+    .myprod_container ol>*:nth-child(1) {
+        width: 4rem;
+        flex: none;
+    }
+
+    .myprod_container ol h5,
+    .myprod_container li p {
+        font-size: 1rem;
+    }
+
+    .myprod_container ol>*:nth-child(2),
+    #content_products li>*:nth-child(2) {
+        width: 12rem;
+    }
+
+    .myprod_container ol>*:nth-child(3),
+    #content_products li>*:nth-child(3) {
+        width: 7rem;
+    }
+
+    .myprod_container ol>*:nth-child(4),
+    #content_products li>*:nth-child(4) {
+        width: 7rem;
+    }
+
+    .myprod_container ol>*:nth-child(5),
+    #content_products li>*:nth-child(5) {
+        width: 5rem;
+    }
+
+    #content_products li>*:nth-child(6) {
+        height: 2.5rem;
+        font-size: 1rem;
+    }
+
+    .myprod_container ol>*:nth-child(6),
+    #content_products li>*:nth-child(6) {
+        width: 2.5rem;
+        flex: none;
+    }
+
+    .action_select p {
+        font-size: 1rem !important;
+
+    }
+
+    #content_products li:nth-child(1) .action_select {
+        transform: translateX(3.3rem) translateY(0) !important;
+
+    }
+
+    .action_select::after {
+        transform: translateX(-.5rem) translateY(0) rotate(45deg);
+    }
+
+    .action_select {
+        width: 6.5rem;
+    }
+
+    .loading_sc div .dp {
+        flex: none;
+        width: 3rem !important;
+        height: 3rem !important;
+    }
+
+    .loading_sc div>* {
+        height: 1.5rem;
+    }
+
+    /* .myprod_container ol>*:nth-child(2),
+    #content_products li>*:nth-child(2) {
+        width: 20%;
+    }
+
+    .myprod_container ol>*:nth-child(3),
+    #content_products li>*:nth-child(3) {
+        max-width: 10%;
+        width: 100%;
+    }
+
+    .myprod_container ol>*:nth-child(4),
+    #content_products li>*:nth-child(4) {
+        max-width: 10%;
+        width: 100%;
+    }
+
+    .myprod_container ol>*:nth-child(5),
+    #content_products li>*:nth-child(5) {
+        max-width: 7.5%;
+        width: 100%;
+    }
+
+    .myprod_container ol>*:nth-child(6),
+    #content_products li>*:nth-child(6) {
+        max-width: 1.5rem;
+        width: 100%;
+    } */
 }
