--- a/resources/login.css
+++ b/resources/login.css
@@ -5,18 +5,17 @@
 }
 
 body {
- position: relative;
+    position: relative;
+    height: 100dvh;
+    background-color: #181818;
 }
 
 main {
+    height: fit-content;
     position: absolute;
-    top: 12rem;
-    left: 21rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-    height: 15rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #login-container {
@@ -34,6 +33,7 @@ main {
     border-radius: 10px;
     width: 100%;
     height: 100%;
+    background-color: white;
 }
 
 #logo {
@@ -46,7 +46,7 @@ main {
     height: 30%;
 }
 
-#logo img{
+#logo img {
     width: 6rem;
 }
 
@@ -61,7 +61,7 @@ main {
 
 
 .form-group input {
-    
+
     width: 12rem;
     height: 30px;
     flex-direction: column;
@@ -70,6 +70,7 @@ main {
     border: none;
     border-radius: 5px;
 }
+
 .form-group input[type] {
     text-indent: .5rem;
 }
@@ -87,4 +88,86 @@ main {
 #btn:hover {
     color: white;
     background-color: rgba(108, 108, 246, 0.844);
+}
+
+.main-loader {
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100dvh;
+    width: 100vw;
+    background-color: #181818;
+    /* opacity: 1;
+background-image: linear-gradient(rgba(160, 160, 160, 0.26),4px,transparent 4px), 
+linear-gradient(to right, rgba(165, 165, 165, 0.219) 4px , #181818 4px);
+background-size: px px; */
+    position: fixed;
+
+}
+
+.center-things {
+    transform: translateY(-1rem) scale(1.3);
+    transition: .5s;
+    display: grid;
+    place-items: center;
+    gap: .8rem;
+}
+
+.main-loader #logo-load {
+    height: 7rem;
+
+}
+
+.loader-bar {
+    transform: translateY(19rem);
+    height: .7rem;
+    width: 1rem;
+    border-radius: 2rem;
+    border: solid 1px rgba(255, 255, 255, 0.192);
+    visibility: hidden;
+    transition: .7s;
+}
+
+.mubing {
+    height: 100%;
+    width: 1rem;
+    border-radius: 2rem;
+    background-color: rgb(255, 255, 255);
+    position: relative;
+    transition: .5s;
+    display: grid;
+    place-items: end;
+}
+
+.mubing .icun {
+    transform: translateY(-1.5rem);
+    font-size: 1rem;
+    background-color: white;
+    color: rgb(255, 104, 3);
+    top: -1rem;
+    height: 1.8rem;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    width: 1.8rem;
+    border: solid 1px gray;
+    position: relative;
+    transition: .5s;
+}
+
+.mubing .icun i {
+    z-index: 1;
+}
+
+.mubing .icun::after {
+
+    content: "";
+    position: absolute;
+    height: 1.3rem;
+    width: 1.3rem;
+    border-radius: 0 .8rem 0 .8rem;
+    background-color: white;
+    transform: rotate(45deg) translate(50%, 50%);
+    bottom: .8rem;
 }
