--- a/resources/cashier.css
+++ b/resources/cashier.css
@@ -121,6 +121,160 @@
 }
 
 
+.discount-form li {
+    list-style: none;
+    position: relative;
+}
+.discount-form-cont{
+    z-index:1 ;
+    display: none;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.dark_mode .discount-form {
+    background-color: #181818 !important;
+    border: solid 1px rgb(160 160 160 / 18%);
+}
+.discount-form {
+    background-color: white;
+    width: 26rem;
+    height: 16rem;
+    border: solid 1px rgba(160, 160, 160, 0.712);
+    border-radius: .5rem;
+    display: grid;
+    place-items: center;
+    gap: 1rem;
+    padding: 1.5rem 0 1rem;
+}
+.discount-form p{
+    font-size: .8rem;
+    position: absolute;
+    margin-left: .5rem;
+}
+.discount-form section:nth-child(1) p{
+    margin-top: .2rem;
+}
+.discount-form section:nth-child(2) p{
+    transform: translateY(-1rem);
+}
+.discount-form section:nth-child(1){
+    display: grid;
+    place-items: center;
+
+} 
+.discount-form section:nth-child(2) {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    padding-top: 1rem;
+}
+
+.discount-form section:nth-child(2)>* {
+    width: 10rem;
+
+}
+
+.monokai_mode .discount-form section:nth-child(1) input:focus ,
+.monokai_mode .discount-form section:nth-child(2) input:focus ,
+.dark_mode .discount-form section:nth-child(1) input:focus ,
+.dark_mode .discount-form section:nth-child(2) input:focus {
+    outline: solid 1px rgb(153 153 153);
+    
+}
+.discount-form section:nth-child(1) input:focus ,
+.discount-form section:nth-child(2) input:focus {
+    outline: solid 1px solid 1px rgb(111 111 111 / 85%);
+    
+}
+.discount-form section:nth-child(1) input ,
+.discount-form section:nth-child(2) input {
+    padding: 0 1rem ;
+
+}
+.dark_mode .discount-form section:nth-child(2) select,
+.dark_mode .discount-form section:nth-child(1) input ,
+.dark_mode .discount-form section:nth-child(2) input {
+    background-color:#181818 ;
+    color: rgb(199, 199, 199);
+    outline: solid 1px rgb(111 111 111 / 85%);
+
+}
+.discount-form section:nth-child(2) select{
+    padding-left: 1rem;
+}
+.discount-form section:nth-child(2) select,
+.discount-form section:nth-child(1) input ,
+.discount-form section:nth-child(2) input {
+    height: 2.4rem;
+    width: 10rem;
+    border-radius: .4rem;
+    border: none;
+    outline: solid 1px rgba(0, 0, 0, 0.377);
+    background-color:#b3b3b34f ;
+    color: rgb(31, 30, 30);
+}
+.last_dd{
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+.monokai_mode .last_dd button,
+.dark_mode .last_dd button{
+    color: rgb(199, 199, 199);
+}
+.last_dd button{
+    padding: .4rem 3rem;
+    border-radius: .4rem;
+}
+.last_dd button:nth-child(1){
+
+    border: solid 1px rgba(126, 126, 126, 0.795);
+    background-color: rgba(77, 77, 77, 0.219);
+}
+.last_dd button:nth-child(1):hover{
+    background-color: rgba(77, 77, 77, 0.678);
+
+}
+.last_dd button:nth-child(2):hover{
+    background-color: rgba(255, 104, 3, 0.623);
+
+}
+.last_dd button:nth-child(2){
+    border: solid 1px rgba(255, 104, 3, 0.795);
+    background-color: rgba(255, 104, 3, 0.219);
+}
+#overlay_cashier{
+    display: none;
+    background-color: #000000a1;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+.side_nav{
+    z-index: 2;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (min-width:1180px) {
 
